call kinit and pass along credentials