@@ -59,7 +59,9 @@ import java.util.Map.Entry;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
+
 import java.nio.file.Paths;
+import java.util.Map;
 
 import static org.junit.Assert.*;
 
@@ -329,12 +331,25 @@ public class SecureQueryServerPhoenixDBIT {
             cmdList.add(System.getProperty("java.security.krb5.conf"));
             LOG.info("Using miniKDC provided krb5.conf  " + KDC.getKrb5conf().getAbsolutePath());
         }
+
         cmdList.add(Integer.toString(PQS_PORT));
         cmdList.add(Paths.get(currentDirectory, "src", "it", "bin", "test_phoenixdb.py").toString());
-        Process runPython = Runtime.getRuntime().exec(cmdList.toArray(new String[cmdList.size()]));
-        BufferedReader processOutput = new BufferedReader(new InputStreamReader(runPython.getInputStream()));
-        BufferedReader processError = new BufferedReader(new InputStreamReader(runPython.getErrorStream()));
-        int exitCode = runPython.waitFor();
+
+        // kinit in some random credcache
+        String KRB5CCNAME;
+        if (osName.indexOf("mac") >= 0 )
+            KRB5CCNAME = kinit(user1.getKey(), user1.getValue(), krb5ConfFile);
+        else
+            KRB5CCNAME = kinit(user1.getKey(), user1.getValue(), KDC.getKrb5conf());
+
+
+        ProcessBuilder runPython = new ProcessBuilder(cmdList);
+        Map<String, String> runPythonEnv = runPython.environment();
+        runPythonEnv.put("KRB5CCNAME", KRB5CCNAME);
+        Process runPythonProcess = runPython.start();
+        BufferedReader processOutput = new BufferedReader(new InputStreamReader(runPythonProcess.getInputStream()));
+        BufferedReader processError = new BufferedReader(new InputStreamReader(runPythonProcess.getErrorStream()));
+        int exitCode = runPythonProcess.waitFor();
 
         // dump stdout and stderr
         while (processOutput.ready()) {
@@ -355,5 +370,54 @@ public class SecureQueryServerPhoenixDBIT {
         byte[] dest = new byte[length];
         System.arraycopy(src, offset, dest, 0, length);
         return dest;
+    }
+
+    String kinit(String principal, File keytab, File krb5ConfFile) throws IOException{
+        ArrayList<String> kinitCmd =  new ArrayList<>();
+        kinitCmd.add("kinit");
+        kinitCmd.add(keytab.getAbsolutePath());
+        kinitCmd.add(principal);
+        ProcessBuilder kinit = new ProcessBuilder(kinitCmd);
+        Map<String, String> kinitEnv = kinit.environment();
+        try {
+            File KRB5CCNAME = File.createTempFile("krb5ccname", null);
+            kinitEnv.put("KRB5CCNAME", KRB5CCNAME.getAbsolutePath());
+        } catch (IOException ioe) {
+            throw ioe;
+        }
+        kinitEnv.put("KRB5_CONFIG", krb5ConfFile.getAbsolutePath());
+        LOG.info("Launching kinit");
+        Process kinitProc = kinit.start();
+
+        BufferedReader processOutput = new BufferedReader(new InputStreamReader(kinitProc.getInputStream()));
+        BufferedReader processError = new BufferedReader(new InputStreamReader(kinitProc.getErrorStream()));
+
+
+        while (processOutput.ready()) {
+            LOG.error(processOutput.readLine());
+        }
+
+
+        int exitCode;
+        LOG.info("Waiting for kinit to complete");
+        try {
+            exitCode = kinitProc.waitFor();
+        } catch (InterruptedException ie) {
+            LOG.error("Interrupted while waiting for kinit to complete");
+            throw new RuntimeException("Interrupted while waiting for kinit", ie);
+        }
+
+        LOG.info("kinit to completed");
+
+        if (exitCode > 0) {
+            LOG.error("kinit exited with non zero value");
+            while (processError.ready()) {
+                LOG.error(processError.readLine());
+            }
+
+            throw new RuntimeException("kinit did not run successfully");
+        }
+        // If we succeeded, return the location of credentials
+        return kinitEnv.get("KRB5CCNAME");
     }
 }
